<resources>
    <string name="app_name">NicoleLab2</string>
    <string name="company_name" translatable="false">LeaseOrRentHome Inc</string>
    <string name="chkout" translatable="false">Checkout</string>
    <string name="Addresses">Addresses</string>
    <string name="cost">Price</string>
    <string name="payment_method">Payment Methods</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="errorMessage">This field is required!</string>
    <string name="clear_confirmation">Clear?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="visa" translatable="false">Visa</string>
    <string name="proceedToOrder">Proceed to Order</string>
    <string name="apartment">Apartment</string>
    <string name="detached">Detached Home</string>
    <string name="semi">Semi-Detached Home</string>
    <string name="condo" translatable="false">Condominium</string>
    <string name="town">Town House</string>
    <string name="cvc" translatable="false">CVC</string>
    <string name="expiry">Expiry</string>
    <string name="card_number">Card Number</string>
    <string name="card">Card</string>
    <string name="enter_address">Enter your address</string>
    <string name="address">Address</string>
    <string name="enter_email">Enter your email</string>
    <string name="email" translatable="false">Email</string>
    <string name="enter_name">Enter your name</string>
    <string name="full_name">Full Name</string>
    <string name="customer_info" translatable="false">Information</string>
    <string name="nicoleMonthTxt">Expiry month</string>
    <string name="submit">Submit</string>
    <string name="year">Expiry Year</string>
    <string name="total" translatable="false">Total:</string>
    <string name="Enter">Enter</string>
</resources>